docs/modules/setup/examples/k8s-single-pod/kroki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kroki
  labels:
    app: kroki

spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    app: kroki
